code refactoring
- убрал конвертирование дат из time.Time в string
- изменил формирование месячного отчета (на вход подается месяц и год, как указано в задании)
- поправил метод получения баланса на резервном счете (SELECT FOR UPDATE)
