# docs/swagger.json
@@ -418,11 +418,11 @@
         "models.RequestReport": {
             "type": "object",
             "properties": {
-                "fromdate": {
-                    "type": "string"
+                "month": {
+                    "type": "integer"
                 },
-                "todate": {
-                    "type": "string"
+                "year": {
+                    "type": "integer"
                 }
             }
         },
